# SSOGenerator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: install.md  myst.yml
ssogenerator/: __init__.py  earth.py  planet.py  satellite.py  solarsystem.py  sun.py  system.py
ssogenerator/utils/: __init__.py  cchecksum.cpp  cchecksum.h  cchecksum_wrapper.pyx  ephemeris.py
