[project]
name = "SSOGenerator"
version = "0.0.1"
description = "Project repository for 2D (or 3D) modelling of a satellites orbiting Earth."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["astropy","numpy","pandas","skyfield"]
authors = [
    {name = "Agnieszka Gurgul", email = "agn.gurgul@umk.pl"}
]

[build-system]
requires = [
    "setuptools >= 77.0.3",
    "cython"
    ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [{
name = "ssogenerator.utils.cchecksum",
sources = ["ssogenerator/utils/cchecksum_wrapper.pyx", "ssogenerator/utils/cchecksum.cpp"],
language = "c++"
}]

#ext-modules = [{
#    name = "ssogenerator.utils.cchecksum", 
#    sources = [
#        "ssogenerator/utils/cchecksum_wrapper.pyx", 
#        "ssogenerator/utils/cchecksum.cpp"
#        ], 
#    language = "c++"
#    }
#]